<?xml version="1.0" encoding="utf-8"?>
<!-- This is the layout for the home / translator screen -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/translator_constraint_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/off_white"
    tools:context=".view.home.TranslatorFragment">

    <!-- Language selection ribbon -->
    <LinearLayout
        android:id="@+id/language_selection"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        android:background="@drawable/section_background"
        android:elevation="4dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- source language spinner -->
        <Spinner
            android:id="@+id/source_language_spinner"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_margin="4dp"
            android:layout_weight="0.4"
            android:contentDescription="@string/source_language_spinner_description"
            android:padding="4dp" />

        <!-- swap language button -->
        <ImageButton
            android:id="@+id/swap_languages_button"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_weight="0.2"
            android:backgroundTint="@color/off_white"
            android:contentDescription="@string/swap_button_description"
            android:scaleType="fitXY"
            android:src="@drawable/ic_baseline_swap_horiz_24" />

        <!-- target language spinner -->
        <Spinner
            android:id="@+id/target_language_spinner"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_margin="4dp"
            android:layout_weight="0.4"
            android:contentDescription="@string/target_spinner_description"
            android:padding="4dp" />

    </LinearLayout>

    <!-- Conversation recycler view area -->
    <View
        android:id="@+id/conversation_background"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/conversation_background"
        android:padding="4dp"
        app:layout_constraintBottom_toTopOf="@id/record_voice_FAB"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/language_selection" />

    <!-- conversation area which displays all items in a conversation -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/conversation_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="4dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_constraintBottom_toBottomOf="@+id/conversation_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/conversation_background"
        app:layout_constraintVertical_bias="0.0" />

    <!-- FAB to record speech -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/record_voice_FAB"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/light_purple"
        android:clickable="true"
        android:contentDescription="@string/FAB_button_description"
        android:scaleType="fitXY"
        android:src="@drawable/ic_baseline_mic_24"
        app:layout_constraintBottom_toTopOf="@id/text_input_area"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/conversation_recycler_view" />

    <!-- Text input area with button to translate -->
    <LinearLayout
        android:id="@+id/text_input_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <!-- text input box -->
        <EditText
            android:id="@+id/text_box"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="4dp"
            android:layout_weight="0.95"
            android:autofillHints=""
            android:background="@drawable/section_background"
            android:elevation="4dp"
            android:hint="@string/enter_text"
            android:inputType="text"
            android:minHeight="48dp"
            android:padding="4dp" />

        <!-- button to send input for translation -->
        <ImageButton
            android:id="@+id/translate_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:background="@drawable/translate_button_background"
            android:contentDescription="@string/translate_button_description"
            android:src="@drawable/ic_baseline_send_24" />

    </LinearLayout>

    <!-- quick language selection ribbon -->
    <LinearLayout
        android:id="@+id/quick_language_selections"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/text_input_area"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/conversation_recycler_view">

        <!-- language A button -->
        <Button
            android:id="@+id/left_language_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/left_button_background"
            android:maxWidth="160dp"
            android:minWidth="160dp"
            android:paddingEnd="40dp"
            android:text="@string/default_quick_language_selection_button_text"
            android:textAlignment="viewStart"
            app:backgroundTint="@color/active_button"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="ButtonStyle,DuplicateSpeakableTextCheck,RtlSymmetry" />

        <!-- language B button -->
        <Button
            android:id="@+id/right_language_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/right_button_background"
            android:maxWidth="160dp"
            android:minWidth="160dp"
            android:paddingStart="40dp"
            android:text="@string/default_quick_language_selection_button_text"
            android:textAlignment="viewEnd"
            app:backgroundTint="@color/unactive_button"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="ButtonStyle,RtlSymmetry" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
